// Copyright 2025 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package turboci.graph.orchestrator.v1;

option go_package = "go.chromium.org/turboci/proto/go/graph/orchestrator/v1;orchestratorpb";
option java_multiple_files = true;

// NOTE - This is StageState with prefixed enum values instead of Stage.State
// so that field_options.proto can import this without making a circular import
// with stage.proto.

// StageState describes the current state of a Stage.
//
// This state evolves like:
//
//   PLANNED -> ATTEMPTING
//   ATTEMPTING -> AWAITING_GROUP
//   AWAITING_GROUP -> FINAL
//
// (The transition through AWAITING_GROUP may be instantaneous if the Stage's
// continuation_group is empty)
//
// The Orchestrator entirely manages Stage state evolution.
//
// These states have enum values in multiples of 10 in case we need to add more
// states later which fall between these 4 initial states.
enum StageState {
  // UNKNOWN is the default, invalid, state.
  STAGE_STATE_UNKNOWN = 0;

  // The Stage is inserted into the graph, but still has unresolved
  // dependencies.
  STAGE_STATE_PLANNED = 10;

  // The Stage's dependencies are resolved and the Orchestrator is trying to
  // coordinate with an external Executor to actually run this Stage.
  //
  // During this state, the Stage.attempts[-1] will contain the status of the
  // current StageAttempt. See StageAttemptState for the StageAttempt state
  // machine.
  STAGE_STATE_ATTEMPTING = 20;

  // The Stage has concluded it's attempts to execute (e.g. the final attempt
  // succeeded or the Stage ran out of retries/time), but during its run one or
  // more StageAttempts emitted additional Stages which it added to
  // Stage.continuation_group, and one or more of those are not yet FINAL.
  STAGE_STATE_AWAITING_GROUP = 30;

  // The Stage has concluded it's attempts to execute (e.g. the final attempt
  // succeeded or the Stage ran out of retries/time) and the
  // Stage.continuation_group is fully resolved (or empty).
  STAGE_STATE_FINAL = 40;
}
